fixing overflow img

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ img {
 .contact-image {
   grid-column: 1 / span 3;
   max-height: 500px;
-  /* overflow: hidden; */
 }
 
 /* Requirement 8 code here -- Do not remove this comment. */
@@ -144,6 +143,7 @@ img {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
+    overflow: hidden;
   }
 }
 
